# Enclypt2.0

./: .env.example  .gitignore  BENCHMARK_REPORT.md  CHANGELOG.md  COMPREHENSIVE_PERFORMANCE_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_STATUS.md  EFFICIENCY_REPORT.md  INSTALLATION.md  Makefile  QUICK_START.md  README.md  comprehensive_benchmark_results.csv
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
benches/: comprehensive_performance.rs  performance.rs  system_aware_benchmarks.rs
config/: enclypt2.toml
docs/: BENCHMARKING.md  README.md
docs/api/: README.md
examples/: basic_encryption.rs
keys/: README.md
scripts/: build.sh  compare_benchmarks.py  report_to_csv.py  run_system_benchmarks.sh  test.sh
src/: cli.rs  file_processor.rs  key_manager.rs  lib.rs  main.rs
src/api/: mod.rs
src/crypto/: aes_gcm.rs  dilithium.rs  errors.rs  kyber.rs  mod.rs  types.rs
tests/: enclypt2_benchmark_report_20250825_075133.txt  enclypt2_benchmark_results_20250825_075604.csv  integration_tests.rs
