[package]
name = "enclypt2"
version = "0.1.0"
edition = "2021"
authors = ["Enclypt Team"]
description = "Post-Quantum Secure File Transfer System"
license = "MIT"
repository = "https://github.com/shashi1910/Enclypt2.0"
documentation = "https://docs.rs/enclypt2"
homepage = "https://github.com/shashi1910/Enclypt2.0"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "encryption", "security", "kyber", "dilithium", "aes", "file-transfer"]
categories = ["cryptography", "command-line-utilities", "security"]
rust-version = "1.70"

[dependencies]
# Post-quantum cryptography
pqcrypto-kyber = "0.7"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Symmetric encryption
aes-gcm = "0.10"

# Utilities
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
base64 = "0.21"

# CLI interface
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File handling
tempfile = "3.8"
dirs = "5.0"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
ctor = "0.2"
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }

# Web server (optional feature)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }

[features]
default = ["cli"]
cli = []
server = ["dep:axum", "dep:tower", "dep:tower-http"]

[[bin]]
name = "enclypt2"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "enclypt2-server"
path = "src/server.rs"
required-features = ["server"]

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "system_aware_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true